# cardputer-ai

./: .gitignore  README.md
docs/: DESIGN.md  m0-hardware-report.md  m1-wireguard-report.md  m2-proxy-report.md  m3-device-chat-report.md  m4-profile-system-report.md  m5-provisioning-report.md
firmware/: README.md  partitions.csv  partitions_ota.csv  platformio.ini  sdkconfig.defaults
firmware-idf-probe/: CMakeLists.txt  platformio.ini  sdkconfig.cardputer-adv-idf  sdkconfig.defaults
firmware-idf-probe/src/: CMakeLists.txt  main.c
firmware/include/: proxy_secrets.h.example  wg_secrets.h.example
firmware/src/: chat_client.cpp  chat_client.h  chat_view.cpp  chat_view.h  http_sse.cpp  http_sse.h  keyboard_input.cpp  keyboard_input.h  main.cpp  net_probe.cpp  net_probe.h  nvs_config.cpp  nvs_config.h  picker_view.cpp  picker_view.h  probe_display.cpp  probe_display.h  probe_keyboard.cpp  probe_sd.cpp  (+20 more)
proxy/: .gitignore  README.md  pyproject.toml
proxy/src/cardputer_proxy/: __main__.py  app.py  auth.py  catalog.py  cli.py  config.py  peers.py  schemas.py  secrets_store.py  sse.py  tokens.py
proxy/src/cardputer_proxy/adapters/: __init__.py  anthropic.py  base.py  generic_oai.py  ollama.py  openai.py
proxy/tests/: conftest.py  test_anthropic_adapter.py  test_auth.py  test_catalog.py  test_chat_completions_passthrough.py  test_generic_oai_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_peer_cli.py  test_peers.py  test_profile_crud.py  test_profile_test_endpoint.py  test_schemas.py  test_secrets_cli.py  test_secrets_resolution.py  test_tokens.py
(+11 files in other folders)
