[project]
name = "cardputer-proxy"
version = "0.2.0"
description = "OAI-compatible proxy for Cardputer-AI; M4 ships profile CRUD + multi-adapter."
requires-python = ">=3.11"
authors = [{ name = "Jarod Belshaw" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "anyio>=4.0",
  "ruff>=0.5",
]

[project.scripts]
cardputer-proxy = "cardputer_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cardputer_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
